--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -45,8 +45,8 @@ $theme-colors: (
 
 :root {
 	--topbar-height : 72px;
-	--sidebar-width : 200px;
-	--sidebar-width : 200px;
+	// --sidebar-width : 200px;
+	--sidebar-width : 0px;
 	--brand-height : 108px;
 }
 
