Updated to Alpha v0.2
Completed Goals from Alpha v0.1 : ALL

1. Month based collection added
2. Register page is functional
User can register now themselves with a valid email and password of their choice, for free!
3. Email verification added for new users. Un-verified account are restricted access into the app
4. Categories Page is improved
5. Auto-generation of categories list is added. Yaay !

Other Un-Planned Upgrades
1. Loading spinner for the app during router.go
2. Loading spinner for categories when fetched

Other Improvements
1. Offline functionality improved by caching of categories
2. Sign out workflow improved with confirmations

Future Plans
1. Look out for bugs and improve
2. Functionality wise, User settings page can be useful (Not anytime soon)

Okay, pushing this to beta v0.1
Accessible on a permanent url : https://indetail-affairs.web.app

--- a/src/assets/css/theme.scss
+++ b/src/assets/css/theme.scss
@@ -52,3 +52,10 @@ $theme-colors: (
 
 @import 'bootstrap/scss/bootstrap.scss';
 @import 'bootstrap-vue/src/index.scss';
+
+.slim {
+	width: 1rem;
+    height: 1rem;
+	border: 0.10em solid currentColor;
+	border-right-color: transparent;
+}
